# profile.wearable.apps.native.idle-clock-digital

./: CMakeLists.txt  LICENSE  org.tizen.idle-clock-digital.xml  org.tizen.idle-clock-digital_settings.xml
data/: CMakeLists.txt  idle-clock-digital.edc
data/po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  es_ES.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  lt.po  lv.po  (+34 more)
include/: app_data.h  clock_view.h  log.h  util.h  window.h
packaging/: org.tizen.idle-clock-digital.spec
src/: clock_view.c  debug.c  main.c  window.c
